Enhance README with video analysis details, refactor analysis and data generation scripts for improved paddle positioning, and implement comprehensive inference results logging. Add captions to study videos and introduce visualization for study results.

--- a/netlify-deployment2/short-study.html
+++ b/netlify-deployment2/short-study.html
@@ -380,6 +380,9 @@
                         <source src="short_study/original_videos/demo_2-13s.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                <div style="margin-top: 12px; background: #e8f4ff; border-left: 4px solid #4facfe; padding: 10px 18px; border-radius: 8px; color: #34495e; font-size: 1.05em;">
+                    <strong>Caption:</strong> This video shows the agent losing a life just a few seconds after the game starts due to an early mistake.
+                </div>
                 </div>
 
                 <!-- Methods will be dynamically generated -->
@@ -413,6 +416,9 @@
                         <source src="short_study/original_videos/demo_15-25s.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                <div style="margin-top: 12px; background: #e8f4ff; border-left: 4px solid #4facfe; padding: 10px 18px; border-radius: 8px; color: #34495e; font-size: 1.05em;">
+                    <strong>Caption:</strong> In this video, the agent attempts to use the tunneling strategy to break through the right-side tunnel, but the strategy was not executed well, causing the ball to deviate and resulting in a failed strategy and a shift to a reactive approach.
+                </div>
                 </div>
 
                 <!-- Methods will be dynamically generated -->
@@ -443,6 +449,9 @@
                         <source src="short_study/original_videos/demo_28-41s.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                <div style="margin-top: 12px; background: #e8f4ff; border-left: 4px solid #4facfe; padding: 10px 18px; border-radius: 8px; color: #34495e; font-size: 1.05em;">
+                    <strong>Caption:</strong> This video demonstrates the agent successfully executing the tunneling strategy to break through the right-side tunnel.
+                </div>
                 </div>
 
                 <!-- Methods will be dynamically generated -->
